# QuantumStateObjects

./: ATTRIBUTION.md  FABRIC_CONSTITUTION.md  PRIVACY_IDENTIFIERS.md  README.md  changelog.md  deploy.md  mkdocs.yml  punchlist.md  pyproject.toml  release.md  taskchain.md
.consent/: consent-capacity-lock-v1.json
config/: instances.json
contracts/: qso-interface-compatibility-source-v1.json  qso-interface-source-tuple-v1.json
docs/: PREFLIGHT_ERROR_IMMUNITY.md  ROADMAP.md  alistaire-integration.md  architecture.md  configuration-and-message-boundaries.md  configuration-message-boundary-v1.json  design-contracts.md  developer-guide.md  ecosystem-interface-compatibility-review-checklist.md  ecosystem-interface-compatibility-v0.json  ecosystem-interface-compatibility.md  fabric-interface-compatibility.md  index.md  interface-compatibility-consumer.md  obstruction-and-gluing.md  operations.md  project-overview.md  release-status.md  runtime-admission-and-reconciliation-profile.md  security.md
fixtures/: qso-interface-compatibility-v1.json
qso_runtime/: attribution.py  audit_observer.py  cli.py  config.py  context_compaction.py  core.py  mutation_audit.py  preflight.py  risk_watch.py  runtime.py
roadmap/: digital-consciousness-field-access.json  digitalis-field-access.json  scaffold-plan.json
schema/: attribution-entry.schema.json  qso-instance.schema.json
scripts/: check_ecosystem_interface_compatibility.py  materialize_roadmap_scaffold.py  validate_consent_lock.py
security/: SECURITY.md
tests/: test_acceptance_remediation.py  test_audit_observer.py  (+19 more)
(+15 files in other folders)
