[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-state-objects"
version = "0.1.0"
description = "Bounded genome-interpreted QSO runtime"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qso-run = "qso_runtime.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
